[package]
name = "crafter"
version = "0.1.0"
edition = "2024"
license = "CC-BY-NC-ND-4.0"

[dependencies]
rand = "0.8.5"
glutin = "0.32.3"
glium = "0.36.0"
nalgebra-glm = "0.19.0"
nalgebra = "0.33.2"
log = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.8"
rfd = "0.15.4"
